# LaTeX-Fmt

./: .gitignore  CMakeLists.txt  README.md
scripts/: setup.sh
src/: main.cpp
src/core/: char_category.h  config.h  registry.h  source_location.h  syntax_check.h  syntax_fix.h  unicode_width.h
src/format/: math_aligner.h  visitor.h
src/md/: md_converter.h
src/parse/: ast.h  lexer.h  parser.h
src/utils/: diff.h  io.h  wrap.h
tests/: run_compile_tests.sh  test_cli.cpp  test_formatter.cpp  test_lexer.cpp  test_main.cpp  test_md.cpp  test_registry.cpp  test_unicode_width.cpp
tests/snapshots/: commands.expected.tex  commands.tex  comments.expected.tex  comments.tex  comprehensive.expected.tex  comprehensive.tex  display_math.expected.tex  display_math.tex  edge_cases.expected.tex  edge_cases.tex  environments.expected.tex  environments.tex  inline_math.expected.tex  inline_math.tex  malformed.expected.tex  malformed.tex  math_align.expected.tex  math_align.tex  math_misc.expected.tex  math_misc.tex  simple.expected.tex  simple.tex  text_spacing.expected.tex  text_spacing.tex  verbatim.expected.tex  verbatim.tex
